Generation de donnees propres Version 2 (#14)
* Generation de donnees propres Version 2

* Generation de donnees propres Version 2

* Generation de donnees propres Version 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       dockerfile: ./src/infra/locust.Dockerfile
     ports:
       - "8089:8089"
+    volumes:
+      - ./src/app/locust/:/mnt/locust/
     depends_on:
       kafka:
         condition: service_healthy
