--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
-    command: ["-f", "smart_meter_locustfile.py", "--host", "http://kafka:9092"]
+    command: [ "-f", "smart_meter_locustfile.py", "--host", "http://kafka:9092" ]
+    networks:
+      - monitoring
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -36,12 +38,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
+    networks:
+      - monitoring
 
   kafka:
     image: confluentinc/cp-kafka:latest
     ports:
-      - 9092:9092
-      - 29092:29092
+      - "9092:9092"
+      - "29092:29092"
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "9092"]
       interval: 10s
@@ -55,6 +59,8 @@ services:
     volumes:
       - ./src/scripts/kafka-init-topic.sh:/home/appuser/init-topic.sh
     command: ["sh", "-c", "kafka-server-start /etc/kafka/server.properties --override zookeeper.connect=zookeeper:2181 --override log.dirs=/var/lib/kafka/logs & /home/appuser/init-topic.sh && wait"]
+    networks:
+      - monitoring
 
   spark-master:
     image: bitnami/spark:3.5.3
@@ -77,6 +83,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - monitoring
 
   spark-worker:
     image: bitnami/spark:3.5.3
@@ -221,7 +229,53 @@ services:
       --default-artifact-root /mlflow/artifacts
       --host 0.0.0.0
 
+
+  prometheus-locust-exporter:
+      image: containersol/locust_exporter:latest
+      container_name: prometheus-locust-exporter
+      ports:
+        - "9646:9646" # Port pour exporter les métriques
+      command:
+        - "--locust.uri=http://locust:8089"  # Assure-toi d'utiliser le bon flag pour définir l'URL de Locust
+      depends_on:
+        - locust
+      networks:
+        - monitoring
+
+
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090" # Port pour accéder à l'interface Prometheus
+    volumes:
+      - ./src/infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml # Fichier de configuration Prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    restart: always
+    networks:
+      - monitoring
+
+  ### grafana
+  grafana:
+        image: grafana/grafana:latest
+        container_name: grafana
+        ports:
+         - "3000:3000"
+        depends_on:
+         - prometheus
+        environment:
+         - GF_SECURITY_ADMIN_PASSWORD=admin
+         - GF_SECURITY_ADMIN_USER=admin
+        networks:
+          - monitoring
+
 volumes:
   hadoop_namenode:
   hadoop_datanode:
   hadoop_historyserver:
+
+networks:
+  monitoring:
+    driver: bridge
