--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       dockerfile: ./src/infra/locust.Dockerfile
     ports:
       - "8089:8089"
+      - "8000:8000"  # Exportation des métriques Prometheus
     volumes:
       - ./src/app/locust/:/mnt/locust/
     depends_on:
@@ -229,21 +230,6 @@ services:
       --default-artifact-root /mlflow/artifacts
       --host 0.0.0.0
 
-
-  prometheus-locust-exporter:
-      image: containersol/locust_exporter:latest
-      container_name: prometheus-locust-exporter
-      ports:
-        - "9646:9646" # Port pour exporter les métriques
-      command:
-        - "--locust.uri=http://locust:8089"  # Assure-toi d'utiliser le bon flag pour définir l'URL de Locust
-      depends_on:
-        - locust
-      networks:
-        - monitoring
-
-
-
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -270,6 +256,7 @@ services:
          - GF_SECURITY_ADMIN_USER=admin
         networks:
           - monitoring
+
 
 volumes:
   hadoop_namenode:
