--- a/src/infra/prometheus/prometheus.yml
+++ b/src/infra/prometheus/prometheus.yml
@@ -1,7 +1,7 @@
+global:
+  scrape_interval: 30s  # Intervalle global pour tous les jobs
+
 scrape_configs:
   - job_name: 'locust'
     static_configs:
-      - targets: ['prometheus-locust-exporter:9646']
-
-
-
+      - targets: ['locust:8000']
